--- a/app/src/main/res/layout/header_homelist.xml
+++ b/app/src/main/res/layout/header_homelist.xml
@@ -2,30 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="4dp">
+    android:orientation="vertical">
     <!--<com.ihaozuo.plamexam.common.AutoViewPager-->
-        <!--android:id="@+id/BannerPager"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" />-->
+    <!--android:id="@+id/BannerPager"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
 
-    <com.ihaozuo.plamexam.common.Banner.XBanner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.ihaozuo.plamexam.common.Banner.XBanner xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/BannerPager"
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:padding="@dimen/padding_10dp"
-        app:pointsPosition="CENTER"
         app:AutoPlayTime="3000"
         app:pointNormal="@drawable/shape_noraml"
-        app:pointSelect="@drawable/shape_selected"/>
+        app:pointSelect="@drawable/shape_selected"
+        app:pointsPosition="CENTER" />
 
     <!--<include layout="@layout/divider_9dp" />-->
-
+    <!--android:layout_marginTop="@dimen/divider_9dp"-->
     <com.ihaozuo.plamexam.common.RevealLayout
         android:layout_width="match_parent"
         android:layout_height="132dp"
-        android:layout_marginTop="@dimen/divider_9dp"
+
         android:background="@color/white"
         android:orientation="horizontal">
 
