--- a/app/src/main/res/layout/report_advice_frag.xml
+++ b/app/src/main/res/layout/report_advice_frag.xml
@@ -7,11 +7,10 @@
 
 
     <ListView
-
         android:id="@+id/listview_adcive_report"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/padding_9dp"
+        android:layout_marginTop="5dp"
         android:divider="@null"
         android:scrollbars="none" />
 
