--- a/app/src/main/res/layout/splash_frag.xml
+++ b/app/src/main/res/layout/splash_frag.xml
@@ -2,24 +2,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvSplash"
-        android:layout_marginTop="128dp"
-        android:layout_marginLeft="40dp"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name" />
-    <TextView
-        android:layout_below="@+id/tvSplash"
-        android:id="@+id/splash_txt2"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/splash_statent" />
+    <!--<TextView-->
+    <!--android:id="@+id/tvSplash"-->
+    <!--android:layout_marginTop="128dp"-->
+    <!--android:layout_marginLeft="40dp"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:textSize="28sp"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/app_name" />-->
+    <!--<TextView-->
+    <!--android:layout_below="@+id/tvSplash"-->
+    <!--android:id="@+id/splash_txt2"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:layout_marginLeft="40dp"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:textSize="18sp"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/splash_statent" />-->
 
 </RelativeLayout>
