--- a/app/src/main/res/layout/consult_frag.xml
+++ b/app/src/main/res/layout/consult_frag.xml
@@ -9,6 +9,7 @@
     <include layout="@layout/actionbar" />
 
     <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
