--- a/app/src/main/res/layout/report_list_frag.xml
+++ b/app/src/main/res/layout/report_list_frag.xml
@@ -38,6 +38,7 @@
         </RelativeLayout>
 
         <ListView
+            android:layout_marginTop="8dp"
             android:id="@+id/listview_report"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
