--- a/app/src/main/res/layout/consult_frag.xml
+++ b/app/src/main/res/layout/consult_frag.xml
@@ -8,85 +8,97 @@
 
     <include layout="@layout/actionbar" />
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
+
+    <FrameLayout
+        android:id="@+id/rLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include
-                layout="@layout/consult_docinfo_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/gray_cc"
-                android:gravity="center"
-                android:maxLines="1"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:text="@string/consult_warning"
-                android:textSize="@dimen/textsize_h5_12sp"
-                android:textColor="@color/white"/>
-
-        </android.support.design.widget.AppBarLayout>
+            android:layout_height="match_parent">
 
 
-        <!--<com.handmark.pulltorefresh.library.extras.recyclerview.PullToRefreshRecyclerView-->
-            <!--xmlns:ptr="http://schemas.android.com/apk/res-auto"-->
-            <!--android:id="@+id/pull_refresh_recycler"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-            <!--android:background="@color/white"-->
-            <!--ptr:ptrMode="pullDownFromTop" />-->
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_Layout"
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/coordinatorLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/pull_refresh_recycler"
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <include
+                    layout="@layout/consult_docinfo_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/gray_cc"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:text="@string/consult_warning"
+                    android:textSize="@dimen/textsize_h5_12sp"
+                    android:textColor="@color/white"/>
+
+            </android.support.design.widget.AppBarLayout>
+
+
+            <!--<com.handmark.pulltorefresh.library.extras.recyclerview.PullToRefreshRecyclerView-->
+                <!--xmlns:ptr="http://schemas.android.com/apk/res-auto"-->
+                <!--android:id="@+id/pull_refresh_recycler"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+                <!--android:background="@color/white"-->
+                <!--ptr:ptrMode="pullDownFromTop" />-->
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipe_Layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/padding_10dp"/>
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/pull_refresh_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingBottom="@dimen/padding_10dp"/>
 
-
-        <!--<android.support.design.widget.FloatingActionButton-->
-            <!--android:id="@+id/fab"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|end"-->
-            <!--android:layout_margin="@dimen/fab_margin"-->
-            <!--app:borderWidth="0dp"-->
-            <!--app:fabSize="normal"-->
-            <!--app:backgroundTint="@color/fab_bg"-->
-            <!--android:src="@drawable/fab_bg"-->
-            <!--app:layout_scrollFlags="scroll|enterAlways|snap" />-->
-
-        <ImageButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/fab_bg"
-            android:background="@drawable/fab_bg_selector"
-            android:visibility="invisible"/>
+            </android.support.v4.widget.SwipeRefreshLayout>
 
 
-    </android.support.design.widget.CoordinatorLayout>
+            <!--<android.support.design.widget.FloatingActionButton-->
+                <!--android:id="@+id/fab"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="bottom|end"-->
+                <!--android:layout_margin="@dimen/fab_margin"-->
+                <!--app:borderWidth="0dp"-->
+                <!--app:fabSize="normal"-->
+                <!--app:backgroundTint="@color/fab_bg"-->
+                <!--android:src="@drawable/fab_bg"-->
+                <!--app:layout_scrollFlags="scroll|enterAlways|snap" />-->
+
+            <ImageButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/fab_bg"
+                android:background="@drawable/fab_bg_selector"
+                android:visibility="invisible"/>
+
+
+        </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -100,6 +112,10 @@
         <include layout="@layout/divider_dd"/>
 
     </LinearLayout>
+        </LinearLayout>
+
+    </FrameLayout>
+
 
 
 </LinearLayout>
