--- a/app/src/main/res/drawable-hdpi/shape_noraml.xml
+++ b/app/src/main/res/drawable-hdpi/shape_noraml.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <size android:width="6dp" android:height="6dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/gray_99" />
 </shape>
