--- a/app/src/main/res/drawable/btn_logout_pressed_shape.xml
+++ b/app/src/main/res/drawable/btn_logout_pressed_shape.xml
@@ -5,7 +5,7 @@
     <!-- 圆角 -->
     <corners android:radius="@dimen/bg_corners" />
     <!-- 填充 -->
-    <solid android:color="@color/d2m_transparent" /><!-- 填充的颜色 -->
+    <solid android:color="@color/gray_f2" /><!-- 填充的颜色 -->
     <!--&lt;!&ndash; 描边 &ndash;&gt;-->
     <stroke android:width="@dimen/divider_2dp" android:color="@color/main_color_blue" />
 
