--- a/app/src/main/res/drawable/btn_bg_selector.xml
+++ b/app/src/main/res/drawable/btn_bg_selector.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true"  android:drawable="@drawable/shape_btn_corners_blue"/>
-    <item android:state_enabled="true"  android:drawable="@drawable/shape_btn_corners_blue"/>
-    <item android:state_enabled="true"  android:drawable="@drawable/shape_btn_corners_blue"/>
-    <item android:state_enabled="false" android:drawable="@drawable/shape_btn_corners_lightgray"/>
-    <item android:state_pressed="true" android:drawable="@drawable/shape_btn_corners_gray"/>
+
+    <item android:drawable="@drawable/shape_btn_corners_lightgray" android:state_enabled="false" />
+    <item android:drawable="@drawable/shape_btn_corners_lightblue" android:state_pressed="true" />
+    <item android:drawable="@drawable/shape_btn_corners_blue" />
 </selector>
